# Python_tasks_algorithm

./: README.md  pyproject.toml  user
Alexei Burnos/: list_of_letters_combinations.py  list_to_word.py  random_list.py  word_counter.py  word_counter_1.py  word_game_assistant.py
Crystal Lab codes/: 10.100.1.csv  10.100.1.xlsx  10.100.4.xlsx  10.100.5.xlsx  30.90.1.xlsx  30.90.3.xlsx  Marina`s task.py  map_spc.py  plotting.py  plotting_1.py  results_frequency_10sec.xlsx
HTML/: Houstone.html  Houstone2.html  Python_tasks_algorithm - Ярлык.lnk  index.html  second task.html  style.css  style1.css  сайт.html  теория html.docx
ITMO/: 10_kV.xlsx  20_kV.xlsx  PyQt.py  YAG Nd.xlsx  main.py  otchet_test.py  stud1.xlsx  ~$YAG Nd.xlsx
Python/: 1.1_draft.py  1.2 draft.py  7 task.txt  Task_1.10.py  Task_1.4.py  Task_1.5.py  Task_1.6.1.py  Task_1.6.py  Task_1.7.py  Task_1.8.py  Task_1.9.py  Test.ipynb  task_0.0.py  task_0.1.py  task_0.2.py  task_0.3.py  task_0.4.py  task_0.5.py  task_0.6.py  task_0.7.1.py  task_0.7.py  task_1.1.py  task_1.2.py  task_1.3.py  test.py  test11.py  untitled2.py  untitled3.py  untitled5.py  untitled6.py  untitled7.py  untitled8.py
STEPIK/: Task_chanks.py  Task_underlist.py  main.py  matrix_1.py  matrix_max_1.py  matrix_max_2.py  matrix_max_3.py  matrix_spur.py  parcer_dentist.py  task_str_1.py  task_str_1_1.py  task_str_1_2.py
Yandex/: DZ_1.py  DZ_1.txt  DZ_2.py  DZ_2_1.py  DZ_3.py  DZ_4.py  DZ_4_1.py  DZ_5.py  task_1.py
apiapp/: fast_app.py  local.py  main.py  main_back.py  pyproject.toml
grokaem/: recursive.py  (+5 more)
tets/: pyproject.toml  test.py
(+3925 files in other folders)
